tests/ui/scalar_types_postgres/fail/unixepoch_requires_sqlite.stderr
error[E0277]: this date/time function is not available for this dialect
 --> tests/ui/scalar_types_postgres/fail/unixepoch_requires_sqlite.rs:5:13
  |
5 |     let _ = unixepoch(raw_non_null::<PostgresValue, drizzle::postgres::types::Timestamp>("NOW()"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a dialect-specific alternative
  |
  = help: the trait `SQLiteDateTimeSupport` is not implemented for `drizzle_core::dialect::PostgresDialect`
help: the trait `SQLiteDateTimeSupport` is implemented for `drizzle_core::dialect::SQLiteDialect`
 --> core/src/expr/datetime.rs
  |
  | impl SQLiteDateTimeSupport for SQLiteDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `unixepoch`
 --> core/src/expr/datetime.rs
  |
  | pub fn unixepoch<'a, V, E>(
  |        --------- required by a bound in this function
...
  |     V::DialectMarker: SQLiteDateTimeSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `unixepoch`
